[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/game_over_screen.gd" id="1"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 36
text = "ROOT ACCESS ACHIEVED"
horizontal_alignment = 1

[node name="SubtitleLabel" type="RichTextLabel" parent="CenterVBox"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
bbcode_enabled = true
theme_override_colors/default_color = Color(0, 0.8, 0, 1)
theme_override_font_sizes/normal_font_size = 18
scroll_active = false
fit_content = true

[node name="ContinueLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -35.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
modulate = Color(1, 1, 1, 0)
theme_override_colors/font_color = Color(0, 0.5, 0, 0.6)
theme_override_font_sizes/font_size = 12
text = "Press any key to continue"
horizontal_alignment = 1
